Alterçaõ de valores teste